force-app/main/default/objects/MoyenExpertise__c/MoyenExpertise__c.object-meta.xml
<CustomObject>
    <label>Moyen d&#39;expertise</label>
    <nameField>
        <label>Numéro de Moyen d&#39;expertise</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Moyens d&#39;expertise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>