force-app/main/default/objects/MoyenExpertise__c/fields/CodeEtatEAD__c.field-meta.xml
<CustomField>
    <fullName>CodeEtatEAD__c</fullName>
    <description>[codEtatEad]</description>
    <label>Code état EAD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>En cours</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Validé</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Exporté</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>