force-app/main/default/objects/MoyenExpertise__c/fields/CodeExpert__c.field-meta.xml
<CustomField>
    <fullName>CodeExpert__c</fullName>
    <description>[codIntervExp] Identifiant de l’expert ayant traité le Dossier EAD</description>
    <label>Code expert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>