force-app/main/default/objects/MoyenExpertise__c/fields/ControleTerrain__c.field-meta.xml
<CustomField>
    <fullName>ControleTerrain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[indControle] Demande de contrôle sur le terrain</description>
    <label>Contrôle terrain</label>
    <type>Checkbox</type>
</CustomField>