force-app/main/default/objects/MoyenExpertise__c/fields/DateCreationDossierNAP__c.field-meta.xml
<CustomField>
    <fullName>DateCreationDossierNAP__c</fullName>
    <description>[datDlNap] Date de téléchargement du Dossier EAD dans NAP</description>
    <label>Date de création du dossier NAP</label>
    <type>Date</type>
</CustomField>