force-app/main/default/objects/MoyenExpertise__c/fields/DatePriseEnCharge__c.field-meta.xml
<CustomField>
    <fullName>DatePriseEnCharge__c</fullName>
    <description>[datPrisCharge] Date de début du traitement par l’expert</description>
    <label>Date de prise en charge</label>
    <type>Date</type>
</CustomField>