force-app/main/default/objects/MoyenExpertise__c/fields/DateTransfert__c.field-meta.xml
<CustomField>
    <fullName>DateTransfert__c</fullName>
    <description>[datTransfert] date de transfert du Dossier EAD (transfert de NAP vers base centrale)</description>
    <label>Date de transfert</label>
    <type>Date</type>
</CustomField>