force-app/main/default/objects/MoyenExpertise__c/fields/DateValidationExpert__c.field-meta.xml
<CustomField>
    <fullName>DateValidationExpert__c</fullName>
    <description>[datValid] Date de validation du dossier EAD par l’expert</description>
    <label>Date de validation expert</label>
    <type>Date</type>
</CustomField>