force-app/main/default/objects/MoyenExpertise__c/fields/Examen__c.field-meta.xml
<CustomField>
    <fullName>Examen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examen</label>
    <referenceTo>Examen__c</referenceTo>
    <relationshipLabel>Moyens d&#39;expertise</relationshipLabel>
    <relationshipName>Moyens_d_expertise</relationshipName>
    <type>Lookup</type>
</CustomField>