force-app/main/default/objects/MoyenExpertise__c/fields/IssueExpertise__c.field-meta.xml
<CustomField>
    <fullName>IssueExpertise__c</fullName>
    <description>[libIssueExp] Commentaire à destination du réparateur</description>
    <label>Issue d&#39;expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>