force-app/main/default/objects/MoyenExpertise__c/fields/MontantDevisExpertise__c.field-meta.xml
<CustomField>
    <fullName>MontantDevisExpertise__c</fullName>
    <description>[montDevisExp] Montant du devis de l’expertise</description>
    <label>Montant devis d&#39;expertise</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>