force-app/main/default/objects/MoyenExpertise__c/fields/MontantDevisReparateur__c.field-meta.xml
<CustomField>
    <fullName>MontantDevisReparateur__c</fullName>
    <description>[montDevisRep] Montant du devis du Dossier EAD (volet) du réparateur</description>
    <label>Montant de devis du réparateur</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>