force-app/main/default/objects/MoyenExpertise__c/fields/MotifRefus__c.field-meta.xml
<CustomField>
    <fullName>MotifRefus__c</fullName>
    <description>[codMotifRefus]</description>
    <label>Motif de refus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RaisonPosition__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 : Dossier traité par l&#39;expert local</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 : Risque VEI</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 : Imputation difficile</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 : Désaccord avec le réparateur</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 : Photos inexploitables</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 : Typologie du sinistre</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 : Dossier incomplet</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 : Risque VGE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>