force-app/main/default/objects/MoyenExpertise__c/fields/NombreAutresExamens__c.field-meta.xml
<CustomField>
    <fullName>NombreAutresExamens__c</fullName>
    <description>[nbExamAutre] Nombre d’examens autre qu’EAD. Valeur calculée pour permettre la mise à jour de l’indicateur IND_EAD_REALISE</description>
    <label>Nombre d&#39;autres examens</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>