force-app/main/default/objects/MoyenExpertise__c/fields/NombreExamensEAD__c.field-meta.xml
<CustomField>
    <fullName>NombreExamensEAD__c</fullName>
    <description>[nbExamEad] Nombre d’examens EAD (Nature d’intervention à &#39;9&#39;) (valeur calculée pour permettre la mise à jour de l’indicateur IND_EAD_REALISE)</description>
    <label>Nombre d&#39;examens EAD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>