force-app/main/default/objects/MoyenExpertise__c/fields/PositionInitialeExpert__c.field-meta.xml
<CustomField>
    <fullName>PositionInitialeExpert__c</fullName>
    <description>[posExpInit] Positionnement de l’expert au début du traitement EAD</description>
    <label>Position initiale de l&#39;expert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>E : EAD</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T : Non EAD</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I : Inconnue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>