force-app/main/default/objects/MoyenExpertise__c/fields/RaisonPosition__c.field-meta.xml
<CustomField>
    <fullName>RaisonPosition__c</fullName>
    <description>[codIssue]</description>
    <label>Raison de la position</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PositionInitialeExpert__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 : Démontage autorisé</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 : Accord sur devis</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 : Accord sur devis modifié</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 : Dossier refusé</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 : Dossier annulé</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>U : Valeur initiale de l’issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>