force-app/main/default/objects/MoyenExpertise__c/fields/ReferenceDossierNAP__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDossierNAP__c</fullName>
    <description>[numDos] Numéro de dossier portable (identifiant local NAP)</description>
    <label>Référence de dossier NAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>