force-app/main/default/objects/MoyenExpertise__c/fields/ReferenceDossierPortable__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDossierPortable__c</fullName>
    <description>[numPort] Numéro d’identifiant portable</description>
    <label>Référence de dossier portable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>