force-app/main/default/objects/MoyenExpertise__c/fields/ReferenceEAD__c.field-meta.xml
<CustomField>
    <fullName>ReferenceEAD__c</fullName>
    <description>[numEad] Numéro identifiant Dossier EAD</description>
    <label>Référence EAD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>