force-app/main/default/objects/MoyenExpertise__c/fields/ReferenceMission__c.field-meta.xml
<CustomField>
    <fullName>ReferenceMission__c</fullName>
    <description>[numDos2000] Numéro de dossier GE (identifiant central)</description>
    <label>Référence de mission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>