force-app/main/default/objects/MoyenExpertise__c/fields/RemarquesDevis__c.field-meta.xml
<CustomField>
    <fullName>RemarquesDevis__c</fullName>
    <description>[libChiffExp] Remarques liées au devis</description>
    <label>Remarques sur le devis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>